--- a/.ci/linters/.goreleaser.yml
+++ b/.ci/linters/.goreleaser.yml
@@ -1,9 +1,9 @@
 # This is an example goreleaser.yaml file with some sane defaults.
 # Make sure to check the documentation at http://goreleaser.com
-project_name: zsh-plugin-name
+project_name: zsh-zed
 env:
   - GO111MODULE=on
-  - REPO=github.com/hadenlabs/zsh-plugin-template
+  - REPO=github.com/hadenlabs/zsh-zed
 before:
   hooks:
     - go mod download
@@ -67,7 +67,7 @@ changelog:
 release:
   github:
     owner: hadenlabs
-    name: zsh-plugin-name
+    name: zsh-zed
   draft: true
   prerelease: auto
   name_template: "{{.ProjectName}}-v{{.Version}}-{{.ShortCommit}}-{{.Date}}"
