--- a/.ci/linters/markdown-link-config.json
+++ b/.ci/linters/markdown-link-config.json
@@ -1,5 +1,5 @@
 {
-  "baseUrl": "https://github.com/hadenlabs/zsh-plugin-template",
+  "baseUrl": "https://github.com/hadenlabs/zsh-zed",
   "ignorePatterns": [
     {
       "pattern": "^https://hadenlabs.com"
