--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # **NOTE**: please check the following document docs/env-vars.md
-APP_NAME=zsh-plugin-template
+APP_NAME=zsh-zed
 SONAR_URL=
 SONAR_TOKEN=
