--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.organization=hadenlabs
-sonar.projectKey=hadenlabs:zsh-plugin-template
+sonar.projectKey=hadenlabs:zsh-zed
 sonar.projectVersion=0.0.0
 sonar.projectBaseDir=./
 sonar.sources=./
